docs: add architecture bento overview

--- a/apps/docs/content/docs/architecture/index.mdx
+++ b/apps/docs/content/docs/architecture/index.mdx
@@ -7,6 +7,8 @@ This section is the “base doc”, split into focused pages so it’s easier to
 
 If you want the **canonical decision log**, see the [ADRs](/docs/adr).
 
+<ArchitectureBento />
+
 ## Canonical mental model
 
 > Local storage is truth  
