Millis to Ms rename convention

--- a/apps/docs/content/docs/adr/0003-field-level-lww-hlc.mdx
+++ b/apps/docs/content/docs/adr/0003-field-level-lww-hlc.mdx
@@ -20,7 +20,7 @@ Converge resolves conflicts using **field-level Last-Write-Wins**, ordered by **
 Each mutable field has its own tag:
 
 ```
-wallMillis:counter:nodeId
+wallMs:counter:nodeId
 ```
 
 ## Alternatives Considered
