--- a/apps/docs/content/docs/guides/materialization.mdx
+++ b/apps/docs/content/docs/guides/materialization.mdx
@@ -48,13 +48,13 @@ SELECT * FROM todos WHERE id = 'todo-1';
     { id: 'tags-write', relativeTo: 'tags', anchor: 'right', offset: { x: 40 }, variant: 'label', label: 'converge_tags' },
   ]}
   edges={[
-    { from: 'append', to: 'load' },
-    { from: 'load', to: 'lww' },
-    { from: 'lww', to: 'domain' },
-    { from: 'domain', to: 'tags' },
-    { from: 'tags-read', to: 'load', fromSide: 'left', toSide: 'right', dashed: true, animated: true },
-    { from: 'domain', to: 'todos', fromSide: 'right', toSide: 'left', dashed: true, animated: true },
-    { from: 'tags', to: 'tags-write', fromSide: 'right', toSide: 'left', dashed: true, animated: true },
+    { from: 'append', to: 'load', orthogonal: true },
+    { from: 'load', to: 'lww', orthogonal: true },
+    { from: 'lww', to: 'domain', orthogonal: true },
+    { from: 'domain', to: 'tags', orthogonal: true },
+    { from: 'tags-read', to: 'load', fromSide: 'left', toSide: 'right', dashed: true, animated: true, orthogonal: true },
+    { from: 'domain', to: 'todos', fromSide: 'right', toSide: 'left', dashed: true, animated: true, orthogonal: true },
+    { from: 'tags', to: 'tags-write', fromSide: 'right', toSide: 'left', dashed: true, animated: true, orthogonal: true },
   ]}
 />
 
