--- a/apps/docs/content/docs/adapters/index.mdx
+++ b/apps/docs/content/docs/adapters/index.mdx
@@ -19,43 +19,36 @@ Converge uses adapters to integrate with different databases and ORMs. There are
 ### Which Database Adapter?
 
 <Diagram
-  height={340}
+  height={280}
   nodes={[
-    { id: 'q1', x: 140, y: 10, label: 'Are you using Drizzle ORM?' },
-    { id: 'yes', relativeTo: 'q1', anchor: 'bottom', offset: { y: 30, x: -100 }, variant: 'label', label: 'Yes' },
-    { id: 'no', relativeTo: 'q1', anchor: 'bottom', offset: { y: 30, x: 100 }, variant: 'label', label: 'No' },
-    { id: 'drizzle', x: 20, y: 120, label: 'db-drizzle' },
-    { id: 'q2', x: 240, y: 120, label: 'What database?' },
-    { id: 'sqlite-label', relativeTo: 'q2', anchor: 'bottom', offset: { y: 30, x: -120 }, variant: 'label', label: 'SQLite' },
-    { id: 'turso-label', relativeTo: 'q2', anchor: 'bottom', offset: { y: 30 }, variant: 'label', label: 'Turso' },
-    { id: 'mem-label', relativeTo: 'q2', anchor: 'bottom', offset: { y: 30, x: 120 }, variant: 'label', label: 'In-memory' },
-    { id: 'sqlite', x: 140, y: 250, label: 'db-sqlite' },
-    { id: 'turso', x: 280, y: 250, label: 'db-turso' },
-    { id: 'memory', x: 420, y: 250, label: 'db-memory' },
+    { id: 'q1', x: 160, y: 10, label: 'Are you using Drizzle ORM?' },
+    { id: 'drizzle', x: 40, y: 120, label: 'db-drizzle' },
+    { id: 'q2', x: 280, y: 120, label: 'What database?' },
+    { id: 'sqlite', x: 140, y: 220, label: 'db-sqlite' },
+    { id: 'turso', relativeTo: 'sqlite', anchor: 'right', offset: { x: 30 }, alignY: 'center', label: 'db-turso' },
+    { id: 'memory', relativeTo: 'turso', anchor: 'right', offset: { x: 30 }, alignY: 'center', label: 'db-memory' },
   ]}
   edges={[
-    { from: 'q1', to: 'drizzle', orthogonal: true },
-    { from: 'q1', to: 'q2', orthogonal: true },
-    { from: 'q2', to: 'sqlite', orthogonal: true },
-    { from: 'q2', to: 'turso', orthogonal: true },
-    { from: 'q2', to: 'memory', orthogonal: true },
+    { from: 'q1', to: 'drizzle', orthogonal: true, label: 'Yes' },
+    { from: 'q1', to: 'q2', orthogonal: true, label: 'No' },
+    { from: 'q2', to: 'sqlite', orthogonal: true, label: 'SQLite' },
+    { from: 'q2', to: 'turso', orthogonal: true, label: 'Turso' },
+    { from: 'q2', to: 'memory', orthogonal: true, label: 'In-memory' },
   ]}
 />
 
 ### Which Materializer?
 
 <Diagram
-  height={200}
+  height={180}
   nodes={[
     { id: 'q', x: 140, y: 10, label: 'Using db-drizzle?' },
-    { id: 'yes', relativeTo: 'q', anchor: 'bottom', offset: { y: 30, x: -80 }, variant: 'label', label: 'Yes' },
-    { id: 'no', relativeTo: 'q', anchor: 'bottom', offset: { y: 30, x: 80 }, variant: 'label', label: 'No' },
-    { id: 'drizzle', x: 40, y: 120, label: 'materialize-drizzle' },
-    { id: 'db', x: 260, y: 120, label: 'materialize-db' },
+    { id: 'drizzle', x: 20, y: 110, label: 'materialize-drizzle' },
+    { id: 'db', x: 280, y: 110, label: 'materialize-db' },
   ]}
   edges={[
-    { from: 'q', to: 'drizzle', orthogonal: true },
-    { from: 'q', to: 'db', orthogonal: true },
+    { from: 'q', to: 'drizzle', orthogonal: true, label: 'Yes' },
+    { from: 'q', to: 'db', orthogonal: true, label: 'No' },
   ]}
 />
 
