feat(docs): add ArchitectureStack component for landing page
- Create custom Tailwind component with layered design
- Replace ASCII diagram with visual stack representation
- Color-coded layers: app (purple), interfaces (green/blue), adapters (badges), core (amber)
- Responsive grid/flex layout

--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -25,20 +25,7 @@ Converge follows a **headless, adapter-based architecture**:
 - **Adapter packages** provide battle-tested implementations for specific databases and ORMs
 - **You pick what you need** — use our adapters or write your own
 
-```
-┌─────────────────────────────────────────────────────────┐
-│                     Your Application                     │
-├─────────────────────────────────────────────────────────┤
-│   @converge/server          @converge/client            │
-│   (Db interface)            (Store interface)           │
-├─────────────────────────────────────────────────────────┤
-│   db-sqlite    db-turso    db-drizzle    db-memory      │
-│   (adapters implement the interfaces)                   │
-├─────────────────────────────────────────────────────────┤
-│                     @converge/core                       │
-│              (HLC, Change, pure merge logic)             │
-└─────────────────────────────────────────────────────────┘
-```
+<ArchitectureStack />
 
 This means:
 - **Swap databases** without changing application code
